--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,2 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<h1>TweetWatch</h1>
+<p>This is the home page for the <a href="http://localhost:3000/">TweetWatch</a> Application.</p>
