devide partial views

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,18 @@
-<h1>TweetWatch</h1>
-<p>This is the home page for the <a href="http://localhost:3000/">TweetWatch</a> Application.</p>
+<div class="center hero-unit">
+  <h1>TweetWatch</h1>
+  <h2>
+    <p>This is the home page for the <a href="http://localhost:3000/">TweetWatch</a> Application.</p>
+  </h2>
+  <%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
+
+
+
+
+
+
+
+
+
