ユーザ登録成功処理

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -10,6 +10,11 @@ $grayLighter: #999;
   box-sizing: border-box;
 }
 
+/* navbar */
+.navbar-inverse .nabvar-inner {
+  background-color: #38a1db;                
+  border-color: #38a1db;                
+}
 /* miscellaneous */
 
 .debug_dump {
@@ -72,7 +77,7 @@ html {
 }
 
 body {
-  padding-top: 60px;
+  padding-top: 20px;
 }
 
 section {
