navbarが被るので一時的にulタグをpタグに変更

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,9 +4,9 @@
       <%= link_to "Tweet Watch", root_path, id: "logo" %>
       <nav>
         <ul class="nav pull-right">
-          <li class="active"><%= link_to "Home",    root_path %></li>
-          <li><%= link_to "Help",    help_path %></li>
-          <li><%= link_to "Sign in", '#' %></li>
+          <p class="active"><%= link_to "Home",    root_path %></p>
+          <p><%= link_to "Help",    help_path %></p>
+          <p><%= link_to "Sign in", '#' %></p>
         </ul>
       </nav>
     </div>
