--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -10,7 +10,7 @@ $grayLighter: #999;
   box-sizing: border-box;
 }
 
-/* miscellaneous */
+/* miscellaneous */o
 
 .debug_dump {
   clear: both;
@@ -19,8 +19,6 @@ $grayLighter: #999;
   margin-top: 45px;
   @include box_sizing;
 }
-
-
 
 /* forms */
 
@@ -72,7 +70,7 @@ html {
 }
 
 body {
-  padding-top: 20px;
+  padding-top: 60px;
 }
 
 section {
@@ -129,6 +127,13 @@ p {
   &:hover {
     color: #fff;
     text-decoration: none;
+  }
+}
+
+ul {
+  li {
+    float: left;
+    margin-left: 10px;
   }
 }
 
