--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,9 +1,9 @@
 <div class="center hero-unit">
-  <h1>TweetWatch</h1>
+  <h1>Welcome to the TweetWatch</h1>
   <h2>
     <p>This is the home page for the <a href="http://localhost:3000/">TweetWatch</a> Application.</p>
   </h2>
-  <%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
 </div>
 
 <%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
