--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -99,7 +99,7 @@ $grayLighter: #999;
     border-top: 1px solid $grayLighter;
     &:last-child {
       border-bottom: 1px solid $grayLighter;
-    }
+    } 
   }
 }
 
@@ -214,27 +214,35 @@ p {
   line-height: 1.7em;
 }
 
-/* header */
-#logo {
-  float: left;
-  margin-right: 10px;
-  font-size: 1.7em;
-  color: #fff;
-  text-transform: uppercase;
-  letter-spacing: -1px;
-  padding-top: 9px;
-  font-weight: bold;
-  line-height: 1;
-  &:hover {
-    color: #fff;
-    text-decoration: none;
-  }
-}
-
 ul {
   li {
     float: left;
     margin-left: 10px;
+  }
+}
+
+/* header */
+header {
+  #logo {
+    float: left;
+    margin-right: 10px;
+    font-size: 1.7em;
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: -1px;
+    padding-top: 9px;
+    font-weight: bold;
+    line-height: 1;
+    &:hover {
+      color: #fff;
+      text-decoration: none;
+    }
+  }
+  ul {
+    li {
+      float: left;
+      margin-left: 10px;
+    }
   }
 }
 
