--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,4 +1,4 @@
-<li style="padding-bottom: 120px">
+<li style="float: none;">
   <%= gravatar_for user, size: 52 %>
   <%= link_to user.name, user %>
 </li>
