--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -88,6 +88,33 @@
 $grayMediumLight: #eaeaea;
 $grayLighter: #999;
 
+/* tracks */
+.tracks {
+  list-style: none;
+  margin: 10px 0 0 0;
+  li {
+    float: left;
+    padding: 10px 0;
+    border-top: 1px solid #e8e8e8
+  }
+}
+.tag {
+  display: block;
+}
+.timestamp {
+  color: $grayLighter;
+}
+.gravatar {
+  float: left;
+  margin-right: 10px;
+}
+aside {
+  textarea {
+    height: 100px;
+    margin-bottom: 5px;
+  }
+}
+
 /* users index */
 
 .users {
