--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,18 +1,27 @@
-<div class="center hero-unit">
-  <h1>Welcome to the TweetWatch</h1>
-  <h2>
+<% if signed_in? %>
+  <div class="row">
+    <aside class="col col-md-4">
+      <section>
+        <%= render 'shared/user_info' %>
+      </section>
+      <section>
+        <%= render 'shared/track_form' %>
+      </section>
+    </aside>
+    <div class="col col-md-8">
+      <h3>Track Feed</h3>
+      <%= render 'shared/feed' %>
+    </div>
+  </div>
+<% else %>
+  <div class="center hero-unit">
+    <h1>Welcome to the TweetWatch</h1>
+
+    <h2>
     <p>This is the home page for the <a href="http://localhost:3000/">TweetWatch</a> Application.</p>
-  </h2>
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
-</div>
+    </h2>
+    <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+  </div>
 
-<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
-
-
-
-
-
-
-
-
-
+  <%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
+<% end %>
