--- a/app/views/tracks/_track.html.erb
+++ b/app/views/tracks/_track.html.erb
@@ -1,5 +1,9 @@
 <li>
-  <span class="track"><%= track.tag %></span>
+  <% if current_user?(track.user) %>
+    <span class="track"><%= link_to(track.tag, tweets_track_path(:track => track.tag)) %></span>
+  <% else %>
+    <span class="track"><%= track.tag %></span>
+  <% end %>
   <span class="timestamp">
     Posted <%= time_ago_in_words(track.created_at) %> ago.
   </span>
