・lazy_high_charts gem追加 ・グラフ描画、Profile画面からとHome画面から来た場合に戻り先を元の場所に

--- a/app/views/tracks/_track.html.erb
+++ b/app/views/tracks/_track.html.erb
@@ -1,6 +1,6 @@
 <li>
   <% if current_user?(track.user) %>
-    <span class="track"><%= link_to(track.tag, tweets_track_path(:track => track.tag)) %></span>
+    <span class="track"><%= link_to(track.tag, tweets_track_path(:user => track.user, :track => track.tag)) %></span>
   <% else %>
     <span class="track"><%= track.tag %></span>
   <% end %>
