--- a/app/views/tweets/track.html.erb
+++ b/app/views/tweets/track.html.erb
@@ -1,5 +1,11 @@
 <p id="notice"><%= notice %></p>
+<!-- <p> -->
+<!-- <% ENV.collect {|k, v| %> -->
+<!-- <%= k+"="+v %><br /> -->
+<!-- <% } %> -->
+<!-- %> -->
+<!-- </p> -->
 <p>
-<%= high_chart("sample", @track) %>
+<%= high_chart("graph", @track) %>
 </p>
 <%= link_to 'Back', (@id) ? user_path(@id) : root_path  %>
