・スマホで見るとメニューが見えなくなるからnavbar-fixed-topからnavbar-static-topに変更

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -197,7 +197,7 @@ html {
 }
 
 body {
-  padding-top: 60px;
+/* padding-top: 60px; */
 }
 
 section {
@@ -281,7 +281,7 @@ footer {
   a {
     color: #555;
     &:hover {
-      color: #222;
+      color: #fff;
     }
   }
   small {
