・動作確認用サーバースクリプトmyserv.rb追加 ・start,stop,storeメソッド&jsスクリプト追加 ・サーバー制御結果をセッション変数で返していたのをajaxに変更途中

--- a/app/views/tweets/track.html.erb
+++ b/app/views/tweets/track.html.erb
@@ -8,4 +8,4 @@
 <p>
 <%= high_chart("graph", @track) %>
 </p>
-<%= link_to 'Back', (@id) ? user_path(@id) : root_path  %>
+<%= link_to 'Back', :back %>
