--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -13,9 +13,11 @@
     <%= link_to "delete", feed_item, method: :delete, data: {confirm: "You sure?"}, 
                                                       title: feed_item.tag %>
     <br />
+    <div id="current_track">
+    </div>
     <% if current_user.admin? %>
-      <%= ((session[:current_track].to_i == feed_item.id) ? "○" : "　") %>
-      <%= link_to("集計開始", tweets_store_path(:track => feed_item.tag, :track_id => feed_item.id)) %>
+      <!-- <%= ((session[:current_track].to_i == feed_item.id) ? "○" : "　") %> -->
+      <%= link_to("タグをセット", tweets_store_path(:track => feed_item.tag, :track_id => feed_item.id, :user => feed_item.user, :format => :js), :remote => true) %>
     <% end %>
   <% end %>
 </li>
