--- a/app/views/tracks/_track.html.erb
+++ b/app/views/tracks/_track.html.erb
@@ -10,9 +10,11 @@
   <% if current_user?(track.user) %>
     <%= link_to "delete", track, method: :delete, data: {confirm: "You sure?"}, title: track.tag %>
     <br />
+    <div id="current_track">
+    </div>
     <% if current_user.admin? %>
-      <%= ((session[:current_track].to_i == track.id) ? "○" : "　") %>
-      <%= link_to("集計開始", tweets_store_path(:track => track.tag, :track_id => track.id, :user => track.user)) %>
+      <!-- <%= ((session[:current_track].to_i == track.id) ? "○" : "　") %> -->
+      <%= link_to("タグをセット", tweets_store_path(:track => track.tag, :track_id => track.id, :user => track.user, :format => :js), :remote => true) %>
     <% end %>
   <% end %>
 </li>
