・サーバースクリプトにタグ文字列を設定する際ユーザIDが必須になったのて   どちらの画面からセットされたか区別すためだけのパラメータuser_flg追加 ・現在セット中のタグをセッション変数で管理

--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -16,8 +16,8 @@
     <div id="current_track">
     </div>
     <% if current_user.admin? %>
-      <!-- <%= ((session[:current_track].to_i == feed_item.id) ? "○" : "　") %> -->
-      <%= link_to("タグをセット", tweets_store_path(:track => feed_item.tag, :track_id => feed_item.id, :user => feed_item.user, :format => :js), :remote => true) %>
+      <%= ((session[:current_track].to_i == feed_item.id) ? "○" : "　") %>
+      <%= link_to("タグをセット", tweets_store_path(:track => feed_item.tag, :track_id => feed_item.id, :user => feed_item.user, :user_flg => nil)) %>
     <% end %>
   <% end %>
 </li>
