--- a/app/views/tweets/store.js.erb
+++ b/app/views/tweets/store.js.erb
@@ -1,3 +1,3 @@
-$('#current_track').html('<%= (@current_track.to_i == track.id) ? "○" : "Err" %>');
+$('#current_track<%= @current_track %>').html('○');
 
 
