・サーバー稼働チェックtweet_controller.check追加 ・サーバースクリプト（myserv.rb）に稼働中かどうか判定コマンド追加 ・ページ読み込み時にajaxでサーバー稼働状況を表示

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,17 @@
+<%= javascript_tag do %>
+$(document).ready(function(){
+  $.ajax({url: '/tweets/check',
+      dataType: "html",
+      success: function(data) {
+        $('#server_status').html(data);
+      },
+      error: function(data) {
+        $('#server_status').html(data);
+      }
+  });
+});
+<% end %>
+
 <% provide(:title, @user.name) %>
 <div class="row">
   <aside class="col col-md-4">
@@ -7,6 +21,10 @@
         <%= @user.name %>
       </h1>
     </section>
+    <!-- <div id="message"> -->
+    <!--   <%= flash.notice %> -->
+    <!--   <%= flash.alert %> -->
+    <!-- </div> -->
     <p>
       <%= link_to("集計開始", tweets_start_path(:user => @user, :format => :js), :remote => true) %>
     </p>
