・tweetcontoroller.checkの値からajaxで表示切り替え

--- a/app/views/tweets/stop.js.erb
+++ b/app/views/tweets/stop.js.erb
@@ -1,1 +1,1 @@
-$('#server_status').html('status = <%= @status_stop ? "停止成功" : "Error" %>');
+$('#server_status').html('status = <%= @status_stop ? "停止中" : "Error" %>');
