--- a/app/views/tweets/start.js.erb
+++ b/app/views/tweets/start.js.erb
@@ -1,1 +1,1 @@
-$('#server_status').html('status = <%= @status_start ? "起動成功" : "Error" %>');
+$('#server_status').html('status = <%= @status_start ? "稼働中" : "Error" %>');
