--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,10 +3,18 @@ $(document).ready(function(){
   $.ajax({url: '/tweets/check',
       dataType: "html",
       success: function(data) {
-        $('#server_status').html(data);
+        if (data == "false") {
+          $('#server_status').html("status = 停止中");
+          $('#server_stop').hide();
+          $('#server_start').show();
+        } else {
+          $('#server_status').html("status = 稼働中");
+          $('#server_stop').show();
+          $('#server_start').hide();
+        }
       },
       error: function(data) {
-        $('#server_status').html(data);
+        alert('Error Occured');
       }
   });
 });
@@ -25,13 +33,13 @@ $(document).ready(function(){
     <!--   <%= flash.notice %> -->
     <!--   <%= flash.alert %> -->
     <!-- </div> -->
-    <p>
+    <div id="server_status" style="margin: 30px 0px;">
+    </div>
+    <div id="server_start">
       <%= link_to("集計開始", tweets_start_path(:user => @user, :format => :js), :remote => true) %>
-    </p>
-    <p>
+    </div>
+    <div id="server_stop">
       <%= link_to("集計中止", tweets_stop_path(:user => @user, :format => :js), :remote => true) %>
-    </p>
-    <div id="server_status">
     </div>
   </aside>
   <div class="col col-md-8">
