・セッション変数current_trackを、サーバースクリプトの引数にするためidではなく 　タグ文字列に ・admin属性付きユーザのみサーバースクリプト起動 ・サーバスクリプト起動時にタグ文字列をコマンドライン引数で渡すことにした ・current_userセットするタイミングでcurrent_trackセッション変数初期化 ・集計開始と集計停止のリンクをajaxでdelay表示

--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -14,8 +14,8 @@
                                                       title: feed_item.tag %>
     <br />
     <% if current_user.admin? %>
-      <%= ((session[:current_track].to_i == feed_item.id) ? "○" : "　") %>
-      <%= link_to("タグをセット", tweets_store_path(:track => feed_item.tag, :track_id => feed_item.id, :user => feed_item.user, :user_flg => nil)) %>
+      <%= ((session[:current_track] == feed_item.tag) ? "○" : "　") %>
+      <%= link_to("タグをセット", tweets_store_path(:track => feed_item.tag, :user => feed_item.user, :user_flg => nil)) %>
     <% end %>
   <% end %>
 </li>
