--- a/app/views/tweets/start.js.erb
+++ b/app/views/tweets/start.js.erb
@@ -1,1 +1,3 @@
 $('#server_status').html('status = <%= @status_start ? "稼働中" : "Error" %>');
+$('#server_start').hide(500)
+$('#server_stop').show(500)
