--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,18 +29,20 @@ $(document).ready(function(){
         <%= @user.name %>
       </h1>
     </section>
-    <!-- <div id="message"> -->
-    <!--   <%= flash.notice %> -->
-    <!--   <%= flash.alert %> -->
-    <!-- </div> -->
-    <div id="server_status" style="margin: 30px 0px;">
+    <div id="message">
+      <%= notice %>
+      <%= alert %>
     </div>
-    <div id="server_start">
-      <%= link_to("集計開始", tweets_start_path(:user => @user, :format => :js), :remote => true) %>
-    </div>
-    <div id="server_stop">
-      <%= link_to("集計中止", tweets_stop_path(:user => @user, :format => :js), :remote => true) %>
-    </div>
+    <% if current_user.admin? %>
+      <div id="server_status" style="margin: 30px 0px;">
+      </div>
+      <div id="server_start">
+        <%= link_to("集計開始", tweets_start_path(:user => @user, :format => :js), :remote => true) %>
+      </div>
+      <div id="server_stop">
+        <%= link_to("集計中止", tweets_stop_path(:user => @user, :format => :js), :remote => true) %>
+      </div>
+    <% end %>
   </aside>
   <div class="col col-md-8">
     <% if @user.tracks.any? %>
