・EventMachineを使ったサーバースクリプトと変数の共有は出来そうにない？ので 　tweet.storeではセッション変数にタグ文字列を保存するだけにした 　プロセス間通信ではなくコマンドラインで渡す ・ホーム画面からサーバスクリプト操作用リンクは無しにした。

--- a/app/views/tracks/_track.html.erb
+++ b/app/views/tracks/_track.html.erb
@@ -12,7 +12,7 @@
     <br />
     <% if current_user.admin? %>
       <%= ((session[:current_track] == track.tag) ? "○" : "　") %>
-      <%= link_to("タグをセット", tweets_store_path(:track => track.tag, :user => track.user, :user_flg => true)) %>
+      <%= link_to("タグをセット", tweets_store_path(:track => track.tag, :user => track.user)) %>
     <% end %>
   <% end %>
 </li>
