--- a/app/views/tracks/_track.html.erb
+++ b/app/views/tracks/_track.html.erb
@@ -12,7 +12,7 @@
     <br />
     <% if current_user.admin? %>
       <%= ((session[:current_track] == track.tag) ? "○" : "　") %>
-      <%= link_to("タグをセット", tweets_store_path(:track => track.tag, :user => track.user)) %>
+      <%= link_to((session[:current_track] == track.tag) ? "集計開始" : "タグをセット", tweets_store_path(:track => track.tag, :user => track.user)) %>
     <% end %>
   <% end %>
 </li>
