--- a/app/views/tweets/stop.js.erb
+++ b/app/views/tweets/stop.js.erb
@@ -1,3 +1,3 @@
 $('#server_status').html('status = <%= @status_stop ? "停止中" : "Error" %>');
-$('#server_stop').hide(500)
+$('#server_store').hide(500)
 $('#server_start').show(500)
