・Servモデル追加したので検索タグ保存用のセッション変数削除 ・state_machineのstatus(state)プロパティはDBに必要だったので追加 ・current_userからServ要素を参照出来ないので調査中＆   検索タグ保存用セッション変数削除した途端specが通過しなくなったので調査中

--- a/app/views/tracks/_track.html.erb
+++ b/app/views/tracks/_track.html.erb
@@ -11,7 +11,7 @@
     <%= link_to "delete", track, method: :delete, data: {confirm: "You sure?"}, title: track.tag %>
     <br />
     <% if current_user.admin? %>
-      <%= ((session[:current_track] == track.tag) ? "○" : "　") %>
+      <%= ((current_user.serv.track == track.tag) ? "○" : "　") %>
       <%= link_to("タグをセット", tweets_track_path(:track => track.tag, :user => track.user)) %>
     <% end %>
   <% end %>
