--- a/app/views/tweets/check.js.erb
+++ b/app/views/tweets/check.js.erb
@@ -1,1 +1,9 @@
-<%= @status_check.to_s %>
+<% if @status_check -%>
+  $('#server_status').html("status = 検索タグ:<%= current_user.serv.track %>で集計中");
+  $('#server_start').hide(500);
+  $('#server_stop').show(500);
+<% else -%>
+  $('#server_status').html("status = 停止中");
+  $('#server_stop').hide(500);
+  $('#server_start').show(500);
+<% end -%>
