--- a/app/views/tweets/stop.js.erb
+++ b/app/views/tweets/stop.js.erb
@@ -1,3 +1,9 @@
-$('#server_status').html('status = <%= @status_stop ? "停止中" : "Error" %>');
-$('#server_store').hide(500)
-$('#server_start').show(500)
+<% if @status_stop -%>
+  $('#server_status').html("status = 停止中");
+  $('#server_stop').hide(500);
+  $('#server_start').show(500);
+<% else -%>
+  $('#server_status').html("status = Error:操作をやり直してください");
+  $('#server_start').hide(500);
+  $('#server_stop').show(500);
+<% end -%>
