・遅いPCだとsleepの値を増やさないとダメみたい、１から５に ・twitter用のaouth認証に使う値を流し込むquery作成して.gitignoreに ・Usersテーブルにtwitter認証キーを格納するカラム４つを追加 ・サーバースクリプト起動時にtwitter認証キーを起動パラメータに追加

--- a/app/views/tweets/stop.js.erb
+++ b/app/views/tweets/stop.js.erb
@@ -4,6 +4,6 @@
   $('#server_start').show(500);
 <% else -%>
   $('#server_status').html("status = Error:操作をやり直してください");
-  $('#server_start').hide(500);
-  $('#server_stop').show(500);
+  $('#server_stop').hide(500);
+  $('#server_start').show(500);
 <% end -%>
