・tweetsテーブルにown_user_id追加。集計はあくまでユーザ毎 ・own_user_idと保存するためサーバースクリプトにコマンドラインからユーザIDを渡す ・userテーブルとtweetsテーブルとの関連付け

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<% if current_user && current_user.admin? %>
 <%= javascript_tag do %>
 $(document).ready(function(){
     $.ajax({
@@ -9,6 +10,7 @@ $(document).ready(function(){
         alert('Error Occured(' + error + ')');
     });
 });
+<% end %>
 <% end %>
 
 <% provide(:title, @user.name) %>
