・集計グラフを自動更新にしようかと思ったけど止め ・変数名訂正等

--- a/app/views/tweets/graph.html.erb
+++ b/app/views/tweets/graph.html.erb
@@ -1,3 +1,17 @@
+<!-- $(document).ready(function(){ -->
+<!--   timer = setInterval(function(){ -->
+<!--     $.ajax({ -->
+<!--         url: '<%= tweets_graph_path(user: @user, track: @track) %>', -->
+<!--         data: {}, -->
+<!--         dataType: "script" -->
+<!--     }).done(function(data, status, xhr) { -->
+<!--     }).fail(function(xhr, status, error) { -->
+<!--         clearInterval(timer); -->
+<!--     }); -->
+<!--   }, 30000 ); -->
+<!-- }); -->
+<%= javascript_tag do -%>
+<% end -%>
 <p id="notice"><%= notice %></p>
 <!-- <p> -->
 <!-- <% ENV.collect {|k, v| %> -->
@@ -5,7 +19,7 @@
 <!-- <% } %> -->
 <!-- %> -->
 <!-- </p> -->
-<p>
-<%= high_chart("graph", @track) %>
-</p>
+<div id="chart">
+<%= high_chart("graph", @graph) %>
+</div>
 <%= link_to 'Back', :back %>
