・サーバースクリプト起動jsは同期を取るようにしてみた（async:false） ・同一ユーザで同一タグが登録できないようtrack.tagに一意性制約を追加

--- a/app/views/tweets/start.js.erb
+++ b/app/views/tweets/start.js.erb
@@ -3,6 +3,7 @@
       url: '/tweets/store', 
       data: {},
       dataType: "html"
+      async: false
   }).done(function(data, status, xhr) {
       $('#server_status').html("status = 検索タグ:<%= current_user.serv.track %>で集計中");
       $('#server_start').hide(500);
