--- a/app/views/tweets/check.js.erb
+++ b/app/views/tweets/check.js.erb
@@ -1,9 +1,9 @@
 <% if @status_check -%>
-  $('#server_status').html("status = 検索タグ:<%= current_user.serv.track %>で集計中");
+  $('#server_status').html("検索タグ:<%= (current_user && current_user.admin) ? current_user.serv.track : "" %> - status:集計中");
   $('#server_start').hide(500);
   $('#server_stop').show(500);
 <% else -%>
-  $('#server_status').html("status = 停止中");
+  $('#server_status').html("検索タグ:<%= (current_user && current_user.admin) ? current_user.serv.track : "" %> - status:停止中");
   $('#server_stop').hide(500);
   $('#server_start').show(500);
 <% end -%>
