・templateファイル（users/show.html.erb）に直接javascriptを書かないと上手くjqueryが 　発動しないので直書きで様子見

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,17 @@
+<% if current_user && current_user.admin? %>
+<%= javascript_tag do %>
+$(document).ready(function(){
+    $.ajax({
+        url: '/tweets/check', 
+        data: {},
+        dataType: "script"
+    }).done(function(data, status, xhr) {
+    }).fail(function(xhr, status, error) {
+        alert('Error Occured(' + error + ')');
+    });
+});
+<% end %>
+<% end %>
 <% provide(:title, @user.name) %>
 <div class="row">
   <aside class="col col-md-4">
