--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 <%= javascript_tag do %>
 $(document).ready(function(){
     $.ajax({
-        url: '/tweets/check', 
+        url: '<%= tweets_check_path %>', 
         data: {},
         dataType: "script"
     }).done(function(data, status, xhr) {
