・js-routes gem追加

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,7 @@
-<% if current_user && current_user.admin? %>
 <%= javascript_tag do %>
 $(document).ready(function(){
     $.ajax({
-        url: '/tweets/check', 
+        url: '<%= tweets_check_path %>',
         data: {},
         dataType: "script"
     }).done(function(data, status, xhr) {
@@ -10,7 +9,6 @@ $(document).ready(function(){
         alert('Error Occured(' + error + ')');
     });
 });
-<% end %>
 <% end %>
 <% provide(:title, @user.name) %>
 <div class="row">
