・routeを追加・変更する度にroutes.jsを出力し直すのが面倒なのでjs-routesを外す

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <%= javascript_tag do %>
 $(document).ready(function(){
     $.ajax({
-        url: '<%= tweets_check_path %>', 
+        url: '/tweets/check', 
         data: {},
         dataType: "script"
     }).done(function(data, status, xhr) {
