--- a/app/views/tracks/_track.html.erb
+++ b/app/views/tracks/_track.html.erb
@@ -1,5 +1,5 @@
 <li>
-  <span class="track"><%= link_to(track.tag, tweets_graph_path(:user => track.user, :track => track.tag)) %></span>
+  <span class="track"><%= link_to(track.tag, graph_tweets_path(:user => track.user, :track => track.tag)) %></span>
   <span class="timestamp">
     Posted <%= time_ago_in_words(track.created_at) %> ago.
   </span>
@@ -8,7 +8,7 @@
     <br />
     <% if current_user.admin? %>
       <%= ((current_user.serv.track == track.tag) ? "○" : "　") %>
-      <%= link_to("タグをセット", tweets_track_path(:track => track.tag, :user => track.user)) %>
+      <%= link_to("タグをセット", track_tweets_path(:track => track.tag, :user => track.user)) %>
     <% end %>
   <% end %>
 </li>
