--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,7 +19,7 @@ $(document).ready(function(){
         <%= @user.name %>
       </h1>
     </section>
-    <% if current_user && current_user.admin? %>
+    <% if current_user?(@user) && current_user.admin? %>
       <div id="server_status">
       </div>
       <div id="server_start">
