・エラーページへの誘導とステータスコードを返す

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,11 +1,11 @@
 <footer class="footer">
   <small>
-    <a href="http://localhost:3000/">Tweet Watch</a>
+    <%= link_to "Tweet Watch", root_path %>
     by SappierBoy
   </small>
   <nav>
     <ul>
-      <li><%= link_to "Contact", '#' %></li>
+      <li><%= link_to "Contact", contact_path %></li>
     </ul>
   </nav>
 </footer>
