--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Contact') %>
 <h1>Contact</h1>
 <p>
-    <p>This is the contact page for the <a href="http://localhost:3000/">TweetWatch</a> Application.</p>
+    <p>This is the contact page for the <%= link_to "TweetWatch", root_path %> Application.</p>
 </p>
